--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,6 +13,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:colorBackground"
         tools:context=".ui.main.listfragment.ListFragment">
 
 
@@ -22,8 +23,7 @@
             android:orientation="vertical">
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/list_icon_home"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_8sdp"
@@ -31,6 +31,7 @@
                 android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/list_icon_home"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha="0.8"
@@ -53,7 +54,7 @@
                     android:layout_gravity="center_vertical"
                     android:alpha="0.8"
                     android:text="@{category.category}"
-                    android:textSize="@dimen/_10sdp"
+                    android:textSize="@dimen/_11sdp"
                     tools:text="Short Sleeve" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -66,7 +67,7 @@
                 android:overScrollMode="never"
                 android:paddingHorizontal="@dimen/_8sdp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                tools:itemCount="5"
+                tools:itemCount="4"
                 tools:listitem="@layout/item_list_recycler_folder" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -78,12 +79,13 @@
                 android:clipToPadding="false"
                 android:overScrollMode="never"
                 android:paddingTop="@dimen/_8sdp"
+                android:paddingBottom="@dimen/_68sdp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_list_recycler" />
+                tools:listitem="@layout/item_list_recycler_list" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/list_fab_folder"
+            android:id="@+id/list_fab_add_folder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_4sdp"
