--- a/app/src/main/res/layout/item_dialog_edit_text.xml
+++ b/app/src/main/res/layout/item_dialog_edit_text.xml
@@ -32,6 +32,7 @@
             android:theme="@style/myEditText"
             app:counterEnabled="true"
             app:counterMaxLength="20"
+            app:errorEnabled="true"
             app:endIconMode="clear_text"
             app:placeholderText="@{placeHolder}">
 
