--- a/app/src/main/res/layout/item_list_recycler_folder.xml
+++ b/app/src/main/res/layout/item_list_recycler_folder.xml
@@ -6,100 +6,86 @@
     <data>
 
         <variable
-            name="listFolder"
-            type="com.example.project_myfit.ui.main.listfragment.database.ListFolder" />
+            name="folder"
+            type="com.example.project_myfit.ui.main.listfragment.database.Folder" />
     </data>
 
-    <com.chauthai.swipereveallayout.SwipeRevealLayout
-        android:id="@+id/list_swipeLayout"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:dragEdge="top"
-        app:mode="normal">
+        android:orientation="vertical">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/folder_card_view"
+            android:layout_width="@dimen/_64sdp"
+            android:layout_height="@dimen/_64sdp"
+            android:layout_margin="@dimen/_4sdp"
+            app:cardCornerRadius="@dimen/_8sdp"
+            app:cardElevation="@dimen/_4sdp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_marginHorizontal="@dimen/_2sdp"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:maxLines="3"
+                android:text="@{folder.folderName}"
+                android:textSize="@dimen/_10sdp"
+                tools:text="comme \n des garcons" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/edit_folder"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_28sdp"
-                android:layout_marginStart="@dimen/_6sdp"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:layout_weight="1"
-                android:background="#008000"
-                android:scaleType="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:tint="@color/white"
-                app:srcCompat="@drawable/icon_edit" />
+                android:id="@+id/folder_drag_handle"
+                setDragHandle="@{folder.itemAmount}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginTop="-4dp"
+                android:layout_marginEnd="-3dp"
+                android:scaleX="0.5"
+                android:scaleY="0.7" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/delete_folder"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_28sdp"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:layout_marginEnd="@dimen/_6sdp"
-                android:layout_weight="1"
-                android:background="#B00020"
-                android:scaleType="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:tint="@color/white"
-                app:srcCompat="@drawable/icon_delete" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/folder_check_box"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_gravity="start"
+                android:layout_marginStart="-4dp"
+                android:layout_marginTop="-4dp"
+                android:alpha="0.8"
+                android:buttonTint="?colorControlNormal"
+                android:clickable="false"
+                android:elevation="@dimen/_3sdp"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:visibility="gone" />
+
+        </com.google.android.material.card.MaterialCardView>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center_horizontal"
+            android:background="?android:colorBackground"
+            android:orientation="horizontal">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/cardView"
-                android:layout_width="@dimen/_64sdp"
-                android:layout_height="@dimen/_64sdp"
-                android:layout_margin="@dimen/_4sdp"
-                app:cardCornerRadius="@dimen/_8sdp"
-                app:cardElevation="@dimen/_4sdp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="bottom"
-                    android:layout_marginHorizontal="@dimen/_2sdp"
-                    android:gravity="center"
-                    android:includeFontPadding="false"
-                    android:maxLines="3"
-                    android:text="@{listFolder.folderName}"
-                    android:textSize="@dimen/_10sdp"
-                    tools:text="comme \n des garcons" />
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <androidx.appcompat.widget.LinearLayoutCompat
+            <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="?android:colorBackground"
-                android:orientation="horizontal">
+                android:includeFontPadding="false"
+                android:text="@{folder.itemAmount}"
+                android:textSize="@dimen/_8sdp"
+                tools:text="2" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:text="@{Integer.toString(listFolder.itemCount)}"
-                    android:textSize="@dimen/_8sdp"
-                    tools:text="2" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_2sdp"
-                    android:includeFontPadding="false"
-                    android:text="@string/items"
-                    android:textSize="@dimen/_8sdp" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:includeFontPadding="false"
+                android:text="@string/items"
+                android:textSize="@dimen/_8sdp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
-    </com.chauthai.swipereveallayout.SwipeRevealLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
