--- a/app/src/main/res/layout/item_list_recycler_list.xml
+++ b/app/src/main/res/layout/item_list_recycler_list.xml
@@ -10,50 +10,39 @@
             type="com.example.project_myfit.ui.main.listfragment.database.Size" />
     </data>
 
-    <com.chauthai.swipereveallayout.SwipeRevealLayout
-        android:id="@+id/list_swipeLayout"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:dragEdge="right"
-        app:mode="normal">
+        android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/list_check_box"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:alpha="0.8"
+            android:buttonTint="?colorControlNormal"
+            android:scaleX="0.7"
+            android:scaleY="0.7" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/list_delete_icon"
-                android:layout_width="@dimen/_22sdp"
-                android:layout_height="match_parent"
-
-                android:layout_marginVertical="@dimen/_6sdp"
-                android:layout_marginEnd="@dimen/_22sdp"
-                android:background="#B00020"
-                android:scaleType="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:src="@drawable/icon_delete"
-                android:tint="@color/white" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <FrameLayout
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/list_card_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_12sdp"
+            android:layout_marginVertical="@dimen/_2sdp"
+            app:cardBackgroundColor="?colorPrimary"
+            app:cardElevation="@dimen/_2sdp">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/list_card_view"
+
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_12sdp"
-                android:layout_marginVertical="@dimen/_2sdp"
-                app:cardBackgroundColor="?colorPrimary"
-                app:cardElevation="@dimen/_2sdp">
+                android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <com.google.android.material.textview.MaterialTextView
@@ -62,6 +51,8 @@
                         android:layout_marginStart="@dimen/_8sdp"
                         android:layout_marginTop="@dimen/_2sdp"
                         android:alpha="0.7"
+                        android:ellipsize="end"
+                        android:maxLines="1"
                         android:text="@{size.brand}"
                         android:textSize="@dimen/_8sdp"
                         tools:text="Anderson Bell" />
@@ -76,17 +67,17 @@
                         android:textSize="@dimen/_11sdp"
                         app:fontFamily="@font/sc_dream5"
                         tools:text="DAMAGED CREW NECK SWEATER" />
-                </LinearLayout>
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/list_drag_handle"
+                    setDragHandle="@{size.size}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end|center_vertical"
                     android:layout_marginEnd="@dimen/_8sdp"
-                    android:alpha="0.8"
-                    app:srcCompat="@drawable/icon_drag_handle" />
-            </com.google.android.material.card.MaterialCardView>
-        </FrameLayout>
-    </com.chauthai.swipereveallayout.SwipeRevealLayout>
+                    android:alpha="0.8" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </com.google.android.material.card.MaterialCardView>
+    </FrameLayout>
 </layout>
