--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,10 +11,10 @@
         <action
             android:id="@+id/action_mainFragment_to_listFragment"
             app:destination="@id/listFragment"
-            app:enterAnim="@anim/fragment_fade_enter"
+            app:enterAnim="@anim/slide_in"
             app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/fragment_fade_exit" />
+            app:popExitAnim="@anim/slide_out" />
     </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
@@ -33,19 +33,26 @@
         <action
             android:id="@+id/action_listFragment_to_inputOutputFragment"
             app:destination="@id/inputOutputFragment"
-            app:enterAnim="@anim/fragment_fade_enter"
+            app:enterAnim="@anim/slide_in"
             app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/fragment_fade_exit" />
+            app:popExitAnim="@anim/slide_out" />
         <action
             android:id="@+id/action_listFragment_to_mainFragment"
             app:destination="@id/mainFragment"
             app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/fragment_fade_exit"
+            app:exitAnim="@anim/slide_out"
             app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/fragment_fade_exit"
+            app:popExitAnim="@anim/slide_out"
             app:popUpTo="@id/mainFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_listFragment_to_inFolderFragment"
+            app:destination="@id/inFolderFragment"
+            app:enterAnim="@anim/slide_in"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/slide_out" />
     </fragment>
     <fragment
         android:id="@+id/inputOutputFragment"
@@ -55,9 +62,9 @@
             android:id="@+id/action_inputOutputFragment_to_listFragment"
             app:destination="@id/listFragment"
             app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/fragment_fade_exit"
+            app:exitAnim="@anim/slide_out"
             app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/fragment_fade_exit"
+            app:popExitAnim="@anim/slide_out"
             app:popUpTo="@id/listFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -65,4 +72,18 @@
         android:id="@+id/mainActivity"
         android:name="com.example.project_myfit.MainActivity"
         android:label="MainActivity" />
+    <fragment
+        android:id="@+id/inFolderFragment"
+        android:name="com.example.project_myfit.ui.main.listfragment.infolderfragment.inFolderFragment"
+        tools:layout="@layout/fragment_list">
+        <action
+            android:id="@+id/action_inFolderFragment_to_listFragment"
+            app:destination="@id/listFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/slide_out"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/slide_out"
+            app:popUpTo="@id/listFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
