--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="recycler_background_night">#FF282828</color>
     <color name="go_button_color">#FFF8F8F8 </color>
     <color name="go_button_color_night">#FF282828</color>
+    <color name="grid_action_mode_background">#4DA9A9A9</color>
+    <color name="grid_action_mode_selected_background">#99808080</color>
 </resources>
