--- a/app/src/main/res/layout/item_list_recycler_folder.xml
+++ b/app/src/main/res/layout/item_list_recycler_folder.xml
@@ -38,14 +38,15 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/folder_drag_handle"
-                setDragHandle="@{folder.itemAmount}"
+                setDragHandle="@{folder.folderName}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginTop="-4dp"
                 android:layout_marginEnd="-3dp"
                 android:scaleX="0.5"
-                android:scaleY="0.7" />
+                android:scaleY="0.7"
+                tools:src="@drawable/icon_drag_handle" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/folder_check_box"
