--- a/app/src/main/res/menu/list_action_mode.xml
+++ b/app/src/main/res/menu/list_action_mode.xml
@@ -2,13 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/list_action_mode_edit"
+        android:icon="@drawable/icon_edit"
+        android:title="@string/edit"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/list_action_mode_move"
         android:title="@string/move_korean"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/list_action_mode_del"
-        android:title="@string/delete_korean"
         android:icon="@drawable/icon_delete"
+        android:title="@string/delete_korean"
         app:showAsAction="ifRoom" />
 
 </menu>
