--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,15 +44,11 @@
         <!--        ripple color remove-->
         <item name="colorControlHighlight">@android:color/transparent</item>
         <item name="myColorControl">@color/black</item>
+        <item name="treeViewBackgroundColor">@color/white</item>
     </style>
     )
     <!--    Tool Bar Title Style-->
     <!--    In Activity_main.xml-->
-    <style name="myToolbarTitleStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textStyle">bold</item>
-        <item name="android:layout_margin">0dp</item>
-        <item name="android:textSize">@dimen/_16sdp</item>
-    </style>
     <!--    Menu Text Style-->
     <style name="menuTextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Menu">
         <item name="android:textStyle">bold</item>
@@ -62,14 +58,13 @@
     <!--    In fragment_input.xml-->
     <style name="myEditTextCorner" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">16dp</item>
+        <item name="cornerSize">@dimen/_12sdp</item>
     </style>
     <!--    Bottom Navigation Active Color-->
     <style name="myBottomNav" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/black</item>
     </style>
     <!--    Alert Dialog Style-->
-    <!--    In MainFragment.java-->
     <style name="myAlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="colorPrimary">@color/black</item>
         <item name="textColorAlertDialogListItem">@color/black</item>
@@ -108,4 +103,5 @@
     <attr name="recyclerBackground" format="color" />
     <attr name="go_button_color" format="color" />
     <attr name="myColorControl" format="color" />
+    <attr name="treeViewBackgroundColor" format="color" />
 </resources>
