--- a/app/src/main/res/layout/fragment_input_output.xml
+++ b/app/src/main/res/layout/fragment_input_output.xml
@@ -43,7 +43,7 @@
                     android:layout_height="match_parent" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/add_image_icon"
+                    android:id="@+id/add_icon"
                     android:layout_width="@dimen/_60sdp"
                     android:layout_height="@dimen/_60sdp"
                     android:layout_gravity="center"
