--- a/app/src/main/res/menu/list_action_mode.xml
+++ b/app/src/main/res/menu/list_action_mode.xml
@@ -10,6 +10,7 @@
     <item
         android:id="@+id/list_action_mode_move"
         android:title="@string/move_korean"
+        android:icon="@drawable/icon_move"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/list_action_mode_del"
