--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -57,17 +57,7 @@
     <fragment
         android:id="@+id/inputOutputFragment"
         android:name="com.example.project_myfit.ui.main.listfragment.inputoutputfragment.InputOutputFragment"
-        tools:layout="@layout/fragment_input_output">
-        <action
-            android:id="@+id/action_inputOutputFragment_to_listFragment"
-            app:destination="@id/listFragment"
-            app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/slide_out"
-            app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/slide_out"
-            app:popUpTo="@id/listFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
+        tools:layout="@layout/fragment_input_output"/>
     <activity
         android:id="@+id/mainActivity"
         android:name="com.example.project_myfit.MainActivity"
