--- a/app/src/main/res/anim/folder_from_bottom.xml
+++ b/app/src/main/res/anim/folder_from_bottom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="200">
-    <translate
-        android:fromYDelta="200%"
-        android:toYDelta="0%" />
-<!--    <scale-->
-<!--        android:pivotX="50%"-->
-<!--        android:pivotY="100%"-->
-<!--        android:toXScale="1"-->
-<!--        android:toYScale="1" />-->
-
-<!--    <set android:duration="800">-->
-<!--        <alpha-->
-<!--            android:fromAlpha="0"-->
-<!--            android:toAlpha="1" />-->
-<!--    </set>-->
-
+    <!--    <translate-->
+    <!--        android:fromYDelta="200%"-->
+    <!--        android:toYDelta="0%" />-->
+    <scale
+        android:fromXScale="0"
+        android:fromYScale="0"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="1"
+        android:toYScale="1" />
+    <rotate
+        android:fromDegrees="0"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toDegrees="360" />
 </set>
