--- a/app/src/main/res/anim/folder_to_bottom.xml
+++ b/app/src/main/res/anim/folder_to_bottom.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="200">
-    <translate
-        android:fromYDelta="0%"
-        android:toYDelta="200%" />
-<!--    <scale-->
-<!--        android:fromXScale="1"-->
-<!--        android:fromYScale="1"-->
-<!--        android:pivotX="100%"-->
-<!--        android:pivotY="100%"-->
-<!--        android:toXScale="0"-->
-<!--        android:toYScale="0" />-->
-
-<!--    <set android:duration="150">-->
-<!--        <alpha-->
-<!--            android:fromAlpha="1"-->
-<!--            android:toAlpha="0" />-->
-<!--    </set>-->
-
+    <!--    <translate-->
+    <!--        android:fromYDelta="0%"-->
+    <!--        android:toYDelta="200%" />-->
+    <scale
+        android:fromXScale="1"
+        android:fromYScale="1"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="0"
+        android:toYScale="0" />
+    <rotate
+        android:fromDegrees="0"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toDegrees="360" />
 </set>
