--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -10,115 +10,92 @@
             type="com.example.project_myfit.ui.main.database.Category" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <com.example.project_myfit.ui.main.listfragment.LockableScrollView
+        android:id="@+id/list_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?android:colorBackground"
-        tools:context=".ui.main.listfragment.ListFragment">
+        android:fillViewport="true">
 
-
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:background="?android:colorBackground"
+            tools:context=".ui.main.listfragment.ListFragment">
 
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:paddingHorizontal="@dimen/_12sdp"
-                android:scrollbars="none">
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/list_navigation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:layout_marginBottom="@dimen/_4sdp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/list_icon_home"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:alpha="0.8"
-                        app:srcCompat="@drawable/icon_home"
-                        app:tint="?colorControlNormal" />
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/list_icon_arrow"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:alpha="0.7"
-                        app:srcCompat="@drawable/icon_arrow_forward"
-                        app:tint="?colorControlNormal" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/list_text_category"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:alpha="0.8"
-                        android:text="@{category.category}"
-                        android:textSize="@dimen/_11sdp"
-                        tools:text="Short Sleeve" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
-            </HorizontalScrollView>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_folder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:orientation="horizontal"
-                android:overScrollMode="never"
-                android:paddingHorizontal="@dimen/_8sdp"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                tools:itemCount="4"
-                tools:listitem="@layout/item_list_recycler_folder" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_size"
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:background="@drawable/recycler_background"
-                android:clipToPadding="false"
-                android:overScrollMode="never"
-                android:paddingTop="@dimen/_8sdp"
-                android:paddingBottom="@dimen/_68sdp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_list_recycler_list" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                android:orientation="vertical">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/list_fab_add_folder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_4sdp"
-            android:layout_marginBottom="@dimen/_44sdp"
-            android:contentDescription="@string/add_folder"
-            android:src="@drawable/icon_folder_add"
-            android:visibility="invisible"
-            app:backgroundTint="?colorControlNormal"
-            app:fabSize="mini"
-            app:layout_anchor="@id/recycler_size"
-            app:layout_anchorGravity="start|bottom"
-            app:tint="?colorPrimary" />
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:paddingHorizontal="@dimen/_12sdp"
+                    android:scrollbars="none">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/list_fab_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_4sdp"
-            android:layout_marginBottom="@dimen/_44sdp"
-            android:contentDescription="@string/add_content"
-            android:src="@drawable/icon_add"
-            android:visibility="invisible"
-            app:backgroundTint="?colorControlNormal"
-            app:fabSize="mini"
-            app:layout_anchor="@id/recycler_size"
-            app:layout_anchorGravity="end|bottom"
-            app:tint="?colorPrimary" />
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/list_navigation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_8sdp"
+                        android:layout_marginBottom="@dimen/_4sdp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/list_icon_home"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.8"
+                            app:srcCompat="@drawable/icon_home"
+                            app:tint="?colorControlNormal" />
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/list_icon_arrow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.7"
+                            app:srcCompat="@drawable/icon_arrow_forward"
+                            app:tint="?colorControlNormal" />
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/list_text_category"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.8"
+                            android:text="@{category.category}"
+                            android:textSize="@dimen/_11sdp"
+                            tools:text="Short Sleeve" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                </HorizontalScrollView>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_folder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:orientation="vertical"
+                    android:overScrollMode="never"
+                    android:paddingHorizontal="@dimen/_8sdp"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="4"
+                    tools:itemCount="10"
+                    tools:listitem="@layout/item_list_recycler_folder" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_size"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:background="@drawable/recycler_background"
+                    android:clipToPadding="false"
+                    android:overScrollMode="never"
+                    android:paddingTop="@dimen/_8sdp"
+                    android:paddingBottom="@dimen/_60sdp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/item_list_recycler_list" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </com.example.project_myfit.ui.main.listfragment.LockableScrollView>
 </layout>
