--- a/app/src/main/res/layout/item_list_recycler_grid.xml
+++ b/app/src/main/res/layout/item_list_recycler_grid.xml
@@ -21,8 +21,7 @@
             android:layout_margin="@dimen/_4sdp"
             app:cardBackgroundColor="?colorPrimary"
             app:cardCornerRadius="@dimen/_4sdp"
-            app:cardElevation="@dimen/_2sdp"
-            app:rippleColor="@android:color/transparent">
+            app:cardElevation="@dimen/_2sdp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
