--- a/app/src/main/res/drawable/tree_view_dialog_background.xml
+++ b/app/src/main/res/drawable/tree_view_dialog_background.xml
@@ -5,6 +5,6 @@
     <padding
         android:bottom="@dimen/_12sdp"
         android:left="@dimen/_8sdp"
-        android:right="@dimen/_8sdp"
-        android:top="@dimen/_12sdp" />
+        android:top="@dimen/_8sdp"
+        android:right="@dimen/_8sdp"/>
 </shape>
