--- a/app/src/main/res/layout/item_dialog_edit_text.xml
+++ b/app/src/main/res/layout/item_dialog_edit_text.xml
@@ -30,11 +30,8 @@
             android:layout_marginTop="@dimen/_12sdp"
             android:hint="@{hint}"
             android:theme="@style/myEditText"
-            app:counterEnabled="true"
-            app:counterMaxLength="20"
-            app:errorEnabled="true"
             app:endIconMode="clear_text"
-            app:placeholderText="@{placeHolder}">
+            app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editText_dialog"
@@ -42,7 +39,6 @@
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:inputType="text"
-                android:maxLength="20"
                 android:text="@{setText}" />
         </com.google.android.material.textfield.TextInputLayout>
     </FrameLayout>
