--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -6,8 +6,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -41,21 +41,25 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_8sdp"
                 android:layout_weight="1"
+                android:ellipsize="end"
                 android:gravity="center_vertical"
+                android:maxLines="1"
+                android:textSize="@dimen/_10sdp"
                 tools:text="폴더 1" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/add_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_20sdp"
                 android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="@dimen/_20sdp"
                 android:tint="?myColorControl"
                 app:srcCompat="@drawable/icon_add" />
         </androidx.appcompat.widget.LinearLayoutCompat>
+
         <View
             android:layout_width="match_parent"
-            android:background="@android:color/transparent"
-            android:layout_height="1px"/>
+            android:layout_height="1px"
+            android:background="@android:color/transparent" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
